position:sticky - respect scroller padding when composited

This CL fixes the cc-side logic for computing the clip rect to
pay attention to the scroller padding. Unlike in Blink we do
not need to adjust for the border, since it isn't included in the
cc-side scroll bounds[0].

Tests are added for both scroller padding and border; the latter is
important as per crbug.com/753124 we may someday change the cc bounds
to include the border. If/when that happens we will need to offset
for the border size as well.

[0]: https://cs.chromium.org/chromium/src/third_party/blink/renderer/platform/graphics/compositing/paint_artifact_compositor.cc?l=203&rcl=11587ff8c9dab387b57d5269624417a2a25a59ff [formerly 3ad6465f517124e8a23434c21f1c543ad47b1d5a]

Bug: 814141
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ie5371198fee3710150c24d077fc31a7da1d037d2
Reviewed-on: https://chromium-review.googlesource.com/1180071
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Yi Gu <yigu@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587638}
Former-commit-id: 56559ffeae48bd3903e7a62ed03e42e795ab9fac